[workspace.package]
authors = ["PartiQL Team <partiql-team@amazon.com>"]
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
version = "0.1.0"
edition = "2022"

[workspace]

members = [
    "partiql-cli",
    "partiql-playground",
]

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3