[package]
name = "partiql-playground"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "PartiQL Playground"
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "ast", "query", "compilers", "playground"]
categories = ["database", "compilers", "wasm", "web"]
exclude = [
    "**/.git/**",
    "**/.github/**",
]
edition = "2021"
version = "0.2.0"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
partiql-parser = { git = "https://github.com/partiql/partiql-lang-rust.git", features=["serde"], version = "0.2.*" }
partiql-logical-planner = { git = "https://github.com/partiql/partiql-lang-rust.git", version = "0.2.*"}
partiql-eval = {  git = "https://github.com/partiql/partiql-lang-rust.git", version = "0.2.*"}
partiql-value = {  git = "https://github.com/partiql/partiql-lang-rust.git", features=["serde"], version = "0.2.*"}
partiql-logical = {  git = "https://github.com/partiql/partiql-lang-rust.git", features=["serde"], version = "0.2.*"}

serde_json = "1.*"
wasm-bindgen = "0.2"

