[package]
name = "partiql-playground"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "PartiQL Playground"
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "ast", "query", "compilers", "playground"]
categories = ["database", "compilers", "wasm", "web"]
exclude = [
    "**/.git/**",
    "**/.github/**",
]
edition = "2021"
version = "0.2.0"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
partiql-parser = { version = "0.3.*", features=["serde"] }
partiql-logical-planner = { version = "0.3.*"}
partiql-eval = { version = "0.3.*"}
partiql-value = {  version = "0.3.*", features=["serde"] }
partiql-logical = { version = "0.3.*", features=["serde"] }
ion-rs = "0.18"
base64 = "0.21"

serde_json = "1.*"
wasm-bindgen = "0.2"
js-sys = "0.3.67"

[dev-dependencies]
wasm-bindgen-test = "0.3"

